# testApp

./: .gitmodules  README_WRISTBAND.md  STRUCTURE_CPP.md  setup_wristband.sh
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  wristband_jni.cpp
app/src/main/java/com/example/apptest2/: MainActivity.kt
app/src/main/java/com/example/apptest2/storage/: ConfigurationStorage.kt
app/src/main/java/com/example/apptest2/sync/: TimeSyncService.kt
app/src/main/java/com/example/apptest2/ui/: MessageConfig.kt  MessageConfigScreen.kt
app/src/main/java/com/example/apptest2/ui/components/: SelectAllOnFocusTextField.kt  ValidatedNumericField.kt
app/src/main/java/com/example/apptest2/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/apptest2/usb/: UsbManager.kt
app/src/main/java/com/example/apptest2/wristband/: WristbandNative.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: device_filter.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
